# wc-prediction-contest

./: .gitignore  DEPLOY_STREAMLIT.md  README.md  SUPABASE_SETUP.md  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: streamlit_app.py
dashboard/: dashboard.js  data.json  index.html  styles.css
data/: fixtures.csv  knockout_bracket.json  wildcards.csv
docs/: RULES.md  TODO.md
exports/: dim_matches.csv  dim_participants.csv  dim_teams.csv  dim_wildcards.csv  fact_leaderboard.csv  fact_match_points.csv  fact_points_timeline.csv
powerbi/: POWERBI_GUIDE.md
scripts/: make_sample_data.py  seed.py
src/wc_contest/: __init__.py  avatar.py  config.py  db.py  engine.py  export.py  flags.py  knockout.py  scoring.py  seed_data.py
