[project]
name = "wc-prediction-contest"
version = "0.1.0"
description = "FIFA World Cup 2026 office prediction competition: Streamlit submission app, scoring engine, and HTML + Power BI dashboards."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.36",
    "pandas>=2.2",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",   # Postgres/Supabase driver (online deployment)
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
